switched to cordova camera plugin

--- a/ember-stereophoto/app/index.html
+++ b/ember-stereophoto/app/index.html
@@ -17,6 +17,7 @@
   <body>
     {{content-for 'body'}}
 
+    <script src="cordova.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/ember-stereophoto.js"></script>
 
